@@ -1,0 +1,133 @@
+% dyn10.mf
+% from cmbxti10.mf
+
+% Computer Modern Bold Extended Text Italic 10 point
+% if unknown cmbase: input cmbase fi
+
+% font_identifier:="CMBXTI"; font_size 10pt#;
+
+input cmbase;
+font_identifier:="DYN"; font_size 10pt#;
+
+u#:=21.2/36pt#;      % unit width
+width_adj#:=11/36pt#;    % width adjustment for certain characters
+serif_fit#:=0pt#;    % extra sidebar near lowercase serifs
+cap_serif_fit#:=7/36pt#;  % extra sidebar near uppercase serifs
+letter_fit#:=11/36pt#;    % extra space added to all sidebars
+
+body_height#:=270/36pt#;  % height of tallest characters
+asc_height#:=250/36pt#;    % height of lowercase ascenders
+cap_height#:=247/36pt#;    % height of caps
+fig_height#:=232/36pt#;    % height of numerals
+x_height#:=160/36pt#;    % height of lowercase without ascenders
+math_axis#:=90/36pt#;    % axis of symmetry for math symbols
+bar_height#:=85/36pt#;    % height of crossbar in lowercase e
+comma_depth#:=70/36pt#;    % depth of comma below baseline
+desc_depth#:=70/36pt#;    % depth of lowercase descenders
+
+crisp#:=13/36pt#;    % diameter of serif corners
+tiny#:=13/36pt#;    % diameter of rounded corners
+fine#:=10/36pt#;    % diameter of sharply rounded corners
+thin_join#:=10/36pt#;    % width of extrafine details
+hair#:=20/36pt#;    % lowercase hairline breadth
+stem#:=38/36pt#;    % lowercase stem breadth
+curve#:=43/36pt#;    % lowercase curve breadth
+ess#:=35/36pt#;      % breadth in middle of lowercase s
+flare#:=42/36pt#;    % diameter of bulbs or breadth of terminals
+dot_size#:=53/36pt#;    % diameter of dots
+cap_hair#:=22/36pt#;    % uppercase hairline breadth
+cap_stem#:=49/36pt#;    % uppercase stem breadth
+cap_curve#:=52/36pt#;    % uppercase curve breadth
+cap_ess#:=50/36pt#;    % breadth in middle of uppercase s
+rule_thickness#:=.6pt#;    % thickness of lines in math symbols
+
+dish#:=1/36pt#;      % amount erased at top or bottom of serifs
+bracket#:=10/36pt#;    % vertical distance from serif base to tangent
+jut#:=27/36pt#;      % protrusion of lowercase serifs
+cap_jut#:=39/36pt#;    % protrusion of uppercase serifs
+beak_jut#:=10/36pt#;    % horizontal protrusion of beak serifs
+beak#:=70/36pt#;    % vertical protrusion of beak serifs
+vair#:=13/36pt#;    % vertical diameter of hairlines
+notch_cut#:=10pt#;    % maximum breadth above or below notches
+bar#:=17/36pt#;      % lowercase bar thickness
+slab#:=17/36pt#;    % serif and arm thickness
+cap_bar#:=17/36pt#;    % uppercase bar thickness
+cap_band#:=17/36pt#;    % uppercase thickness above/below lobes
+cap_notch_cut#:=10pt#;    % max breadth above/below uppercase notches
+serif_drop#:=3/36pt#;    % vertical drop of sloped serifs
+stem_corr#:=2/36pt#;    % for small refinements of stem breadth
+vair_corr#:=1.5/36pt#;    % for small refinements of hairline height
+apex_corr#:=0pt#;    % extra width at diagonal junctions
+
+o#:=6/36pt#;      % amount of overshoot for curves
+apex_o#:=6/36pt#;    % amount of overshoot for diagonal junctions
+
+slant:=.25;      % tilt ratio $(\Delta x/\Delta y)$
+fudge:=1;      % factor applied to weights of heavy characters
+math_spread:=.5;    % extra openness of math symbols
+superness:=8/11;    % parameter for superellipses
+superpull:=1/8;      % extra openness inside bowls
+beak_darkness:=.4;    % fraction of triangle inside beak serifs
+ligs:=2;      % level of ligatures to be included
+
+square_dots:=false;    % should dots be square?
+hefty:=false;      % should we try hard not to be overweight?
+serifs:=true;      % should serifs and bulbs be attached?
+monospace:=false;    % should all characters have the same width?
+variant_g:=true;    % should an italic-style g be used?
+low_asterisk:=false;    % should the asterisk be centered at the axis?
+math_fitting:=false;    % should math-mode spacing be used?
+
+% generate textit      % switch to the driver file
+
+% mode_setup; font_setup;
+
+% "f" obviously has a _lot_ bigger slant than "p" (see wanske p239)
+% however; perhaps we need two f symbols:
+%  - a super-slanted one used in "f" "mf" "sfz" "sf", and
+%  - a more normal-slanted in "ff" "fff" "fp" "fp" (see wanske p241)
+%
+% looking at professionally typeset music reveals that typesetters 
+% are somewhat unsure about slanting in "mf", "fp", "sfz"
+
+% "f" and "p" (in any combination) are a lot (factor two) fatter than
+% "s", "m", and "z".  sometimes the "m" and "z" are a bit fatter than
+% "s".
+
+slant:=.62;      % tilt ratio $(\Delta x/\Delta y)$
+crisp#:=19/36pt#;    % diameter of serif corners
+tiny#:=19/36pt#;    % diameter of rounded corners
+fine#:=20/36pt#;    % diameter of sharply rounded corners
+thin_join#:=20/36pt#;    % width of extrafine details
+stem#:=57/36pt#;    % lowercase stem breadth
+curve#:=64/36pt#;    % lowercase curve breadth
+flare#:=64/36pt#;    % diameter of bulbs or breadth of terminals
+
+mode_setup; font_setup;
+input ital-f;
+slant:=.38;      % tilt ratio $(\Delta x/\Delta y)$
+mode_setup; font_setup;
+input ital-p;
+
+slant:=.28;      % tilt ratio $(\Delta x/\Delta y)$
+stem#:=30/36pt#;    % lowercase stem breadth
+ess#:=28/36pt#;      % breadth in middle of lowercase s
+
+crisp#:=13/36pt#;    % diameter of serif corners
+tiny#:=13/36pt#;    % diameter of rounded corners
+fine#:=10/36pt#;    % diameter of sharply rounded corners
+thin_join#:=10/36pt#;    % width of extrafine details
+hair#:=20/36pt#;    % lowercase hairline breadth
+% stem#:=38/36pt#;    % lowercase stem breadth
+% curve#:=43/36pt#;    % lowercase curve breadth
+flare#:=42/36pt#;    % diameter of bulbs or breadth of terminals
+% ess#:=35/36pt#;      % breadth in middle of lowercase s
+
+mode_setup; font_setup;
+
+input ital-m;
+input ital-s;
+input ital-z;
+
+font_slant slant; font_x_height x_height#;
+bye.
