@@ -88,22 +88,26 @@
         \divide\interstaffrule by 4
 }
 
-% dynamics take extra kerning
+
 \def\dyn{\dynfont}
-\def\kdynf{\dynfont f\kern-.1ex}
-\def\kdynm{\dynfont m\kern-.15ex}
-\def\kdynp{\dynfont p\kern-.15ex}
+\def\kdynf{\dynfont \char0\kern-.2ex}
+\def\kdynm{\dynfont \char1\kern-.18ex}
+\def\kdynp{\dynfont \char2\kern-.08ex}
+\def\kdyns{\dynfont \char3\kern-.22ex}
+\def\kdynz{\dynfont \char4\kern-.2ex}
 
-
-\def\dynp{\dynfont p}
+\def\dynp{\kdynp}
 \def\dynpp{\dynp\kdynp}
 \def\dynppp{\dynpp\kdynp}
-\def\dynmp{\dynfont m\kdynp}
-\def\dynmf{\dynfont m\kdynf}
-\def\dynf{\dynfont f}
+\def\dynmp{\kdynm\kdynp}
+\def\dynmf{\kdynm\kdynf}
+\def\dynf{\kdynf}
 \def\dynff{\dynf\kdynf}
 \def\dynfff{\dynff\kdynf}
 
+\def\dynfp{\kdynf\kern.35ex\kdynp}
+\def\dynsf{\kdyns\kdynf}
+\def\dynsfz{\dynsf\kern.3ex\kdynz}
 
 \input taupindefs
 
