@@ -12,7 +12,7 @@
         \font\musicfnt=musix20
         \font\musicdraw=musixsps
         \font\italicfont=cmti10
-        \font\dynfont=cmbxti10 scaled \magstep1
+        \font\dynfont=dyn10 scaled \magstep2
         \font\musicmathfont=cmsy10
 }
 
@@ -29,7 +29,7 @@
         \font\hslurdfont=xslhd16
         \font\hslurhfont=xslhz20
         \font\musicfnt=musix16
-        \font\dynfont=cmbxti10
+        \font\dynfont=dyn10 scaled \magstep1
         \font\musicdraw=musixsps
         \font\musicmathfont=cmsy8
 }
